--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ body {
     display: inline-block;
     position: absolute;
     left: 0;
-    top: 10px;
+    top: 10pх;
 }
 
 .company-contacts {
