--- a/style.css
+++ b/style.css
@@ -9,14 +9,17 @@ body {
 .container {
     width: 1100px;
     margin: 0 auto;
+    
 }
 
 .header {
     background: #4b73b5;
     color: #fff;
+    height: 77px;
+    margin-bottom: 50px; 
 }
 
-.header .container {
+.header__conteiner {
     position: relative;
     height: 77px;
 }
@@ -24,14 +27,14 @@ body {
 .logo {
     display: inline-block;
     position: absolute;
-    left: 0;
-    top: 10pх;
+    margin: 21px;
 }
 
 .company-contacts {
     position: absolute;
-    right: 0;
-    top: 10px;
+    right: 21px;
+    top: 20px;
+    text-align: right;
 }
 
 .company-contacts__phone {
@@ -45,4 +48,23 @@ body {
     font-size: 14px;
     font-weight: bold;
     opacity: .7;
+}
+
+ul {
+    margin: 0;
+    padding: 0;
+}
+
+ul li {
+    list-style: none;
+}
+
+.banner {
+    width: 1007px;
+    height: 299px;
+}
+
+.banner .nav {
+    display: inline-block;
+    vertical-align: top;
 }
