--- a/style.css
+++ b/style.css
@@ -367,23 +367,31 @@ body {
 
 .content .banner {
     height: 300px;
-    background-image: url("./file/airbas.png");
+    
 }
 
 .tariffs {
     margin-bottom: 34px;
 }
 
+.tariff-item__nav {
+    display: inline-block; 
+}
+
+.tariff-item:nth-child(3n) {
+    margin-right: 0; 
+}
+
 .tariff-item {
     margin-right: 20px;
-    float: left;
+    display: inline-block;
     padding: 25px;
     width: 250px;
     height: 456px;
     text-align: center;
     border: 1px solid transparent;
     border-radius: 5px;
-    box-sizing: border-box;
+    
 }
 
 .tariff-item:hover {
@@ -398,10 +406,6 @@ body {
     line-height: 90px;
     border-radius: 50%;
     margin-bottom: 25px;
-}
-
-.tariff-item__header {
-    line-height: 30px;
 }
 
 .tariff-item__name {
