--- a/style.css
+++ b/style.css
@@ -376,6 +376,7 @@ body {
 
 .tariff-item__nav {
     display: inline-block; 
+    
 }
 
 .tariff-item:nth-child(3n) {
@@ -386,16 +387,12 @@ body {
     margin-right: 20px;
     display: inline-block;
     padding: 25px;
-    width: 250px;
-    height: 456px;
+    width: 31%;
+    height: 150px;
     text-align: center;
     border: 1px solid transparent;
     border-radius: 5px;
     
-}
-
-.tariff-item:hover {
-    border: 1px solid #e8e9ed;
 }
 
 .tariff-item__img-place {
@@ -403,7 +400,7 @@ body {
     width: 68px;
     height: 68px;
     background-color: #4b73b5;
-    line-height: 90px;
+    line-height: 80px;
     border-radius: 50%;
     margin-bottom: 25px;
 }
@@ -415,12 +412,14 @@ body {
     letter-spacing: 2.88px;
     line-height: 51.38px;
     color: #212121;
+    
 }
 
 .tariff-item__description {
     line-height: 30px;
     font-size: 18px;
     color: #221f1f;
+    text-align: center;
 }
 
 .tariff-item__description-header {
@@ -428,16 +427,11 @@ body {
 }
 
 .tariff-item__description-text {
-    margin-bottom: 20px;
+    margin-bottom: 25px;
     text-align: left;
-}
-
-.tariff-item__description-text ul {
-    list-style-position: inside;
-}
-
-.tariff-item__description-text ul li {
-    margin-bottom: 5px;
+    list-style-type: none;
+    width: 185px;
+    margin-right: 10px;
 }
 
 .tariff-item .tariff-price {
@@ -446,4 +440,32 @@ body {
 
 .tariff-item .tariff-price .dollar {
     font-size: 40px;
+}
+
+.block_list {
+    font-size: 0;
+    list-style: none;
+    padding: 0;
+}
+
+.block_item {
+    display: inline-block;
+    width: 31%;
+    text-align: center;
+    height: 456px;
+    margin-right: 30px;
+    font-size: 30px;
+    margin-bottom: 30px;
+    padding: 30px;
+}
+
+.block_item:nth-child(3n) {
+    margin-right: 0;
+}
+
+.block_item:hover {
+    border: 1px solid #e8e9ed;
+    margin-top: -4px;
+    height: 456px;
+    
 }
