--- a/style.css
+++ b/style.css
@@ -429,9 +429,9 @@ body {
 .tariff-item__description-text {
     margin-bottom: 25px;
     text-align: left;
-    list-style-type: none;
+    list-style-type: disc;
     width: 185px;
-    margin-right: 10px;
+    
 }
 
 .tariff-item .tariff-price {
