--- a/style.css
+++ b/style.css
@@ -37,23 +37,16 @@ body {
 
 .heading {
     font-size: 49px;
-    margin-top: 10px;
-    margin-bottom: 41px;
+
 }
 
 .pagination {
     font-size: 14px;
-    margin-bottom: 60px;
-}
 
-.pagination__wrapper {
+    margin-right: 10px;
     display: flex;
     justify-content: center;
     align-items: center;
-}
-
-.pagination__wrapper .current-page {
-    margin-right: 10px;
 }
 
 .paginationcurrent-page {
@@ -433,7 +426,7 @@ body {
 }
 
 .tariff-item__description-text {
-    margin-bottom: 25px;
+
     text-align: left;
     list-style-type: disc;
     width: 185px;
@@ -450,7 +443,7 @@ body {
     font-size: 54px;
     letter-spacing: -1.07px;
     line-height: 173.58px;
-    padding: 10px 52px 50px 40px; 
+    padding: 10px 52px 50px 40px;
 }
 
 .dollar {
@@ -470,9 +463,9 @@ body {
     width: 31%;
     text-align: center;
     height: 456px;
-    margin-right: 30px;
+
     font-size: 30px;
-    margin-bottom: 30px;
+
     padding: 30px;
     border: 1px solid transparent;
 }
@@ -485,5 +478,21 @@ body {
     border: 1px solid #e8e9ed;
     margin-top: -4px;
     height: 456px;
+
+}
+
+
+
+.reviews__avatar {
+    float: left;
+    margin-right: 17px;
+    width: 160px;
+    height: 160px;
+    overflow: hidden;
+    border-radius: 50%;
+}
+
+.reviews__description {
+    float: left;
 
 }
