--- a/style.css
+++ b/style.css
@@ -485,12 +485,10 @@ body {
 
 .reviews__avatar {
     float: left;
-
-    
     border-radius: 50%;
 }
 
 .reviews__description {
-    
+    float: left;
 
 }
