--- a/style.css
+++ b/style.css
@@ -1,4 +1,18 @@
-ul {
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
+html, body {
+    height: 100%;
+    width: 100%;
+}
+
+li {
     list-style-type: none;
 }
 
+a {
+    text-decoration: none;
+}
