--- a/style.css
+++ b/style.css
@@ -79,6 +79,7 @@ a {
     display: flex;
     width: 740px;
     margin: 0 auto;
+    padding-bottom: 61px;
 
 }
 
@@ -138,7 +139,7 @@ a {
     font-size: 49px;
     font-weight: 700;
     line-height: 38px;
-
+    padding-bottom: 70px;
 }
 
 .list {
@@ -160,6 +161,44 @@ a {
     font-size: 40px;
 }
 
-.reviews {
+.reviews__item {
     display: flex;
+    border-bottom: 2px solid#f5f5f5;
+    margin-bottom: 30px;
+    padding-bottom: 30px;
 }
+
+.reviews__item:last-child {
+    margin-bottom: 0;
+    border-bottom: 0;
+}
+
+.reviews__avatar {
+    border-radius: 50%;
+    overflow: hidden;
+    width: 160px;
+    height: 160px;
+    flex: 0 0 auto;
+    margin-right: 20px;
+}
+
+.reviews__date {
+    color: #221f1f;
+    font-family: Roboto;
+    font-size: 18px;
+    font-weight: 300;
+}
+
+.reviews__header {
+    font-family: "Roboto - Bold";
+    font-weight: 700;
+    line-height: 21px;
+}
+
+.reviews__description--text {
+    font-family: "Roboto Light";
+    font-weight: 300;
+    line-height: 30px;
+}
+
+
