--- a/style.css
+++ b/style.css
@@ -39,9 +39,7 @@ a {
     width: 100%;
 }
 
-.footer__container {
-    height: 100%
-}
+.footer__container {}
 
 .header__container {
     height: 100%;
@@ -201,4 +199,29 @@ a {
     line-height: 30px;
 }
 
+.footer__left {
+    float: left;
+}
 
+.footer__center {
+    display: flex;
+    justify-content: center;
+
+}
+
+.footer__right {
+    float: right;
+}
+
+.social__icons {
+    display: flex;
+}
+
+.social__img {
+    margin-right: 10px;
+    background-color: #4b73b5;
+    border-radius: 50%;
+    flex: 0 0 auto;
+    width: 20px;
+    height: 20px;
+}
