--- a/style.css
+++ b/style.css
@@ -39,8 +39,6 @@ a {
     width: 100%;
 }
 
-.footer__container {}
-
 .header__container {
     height: 100%;
 }
@@ -98,6 +96,14 @@ a {
     border: 1px solid #e8e9ed;
 }
 
+.maincontent {
+    display: flex;
+}
+
+.aside {
+    width: 160px;
+    flex: 0 0 auto;
+}
 
 .block__img {
     width: 68px;
@@ -199,29 +205,36 @@ a {
     line-height: 30px;
 }
 
-.footer__left {
-    float: left;
-}
-
-.footer__center {
-    display: flex;
-    justify-content: center;
-
-}
-
-.footer__right {
-    float: right;
-}
-
-.social__icons {
+.nav__pagination {
     display: flex;
 }
 
-.social__img {
+.pagination__items {
+    display: flex;
+}
+
+.footer__container {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+}
+
+.footer__left {}
+
+.footer__center {}
+
+.footer__right {}
+
+.social__icons {}
+
+.social__link {
     margin-right: 10px;
     background-color: #4b73b5;
     border-radius: 50%;
     flex: 0 0 auto;
     width: 20px;
     height: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
